--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-API_KEY=API_KEY
-AUTH_DOMAIN=AUTH_DOMAIN
-PROJECT_ID=PROJECT_ID
-STORAGE_BUCKET=STORAGE_BUCKET
-MESSAGING_SENDER_ID=MESSAGING_SENDER_ID
-APP_ID=APP_ID
+VITE_API_KEY=API_KEY
+VITE_AUTH_DOMAIN=AUTH_DOMAIN
+VITE_PROJECT_ID=PROJECT_ID
+VITE_STORAGE_BUCKET=STORAGE_BUCKET
+VITE_MESSAGING_SENDER_ID=MESSAGING_SENDER_ID
+VITE_APP_ID=APP_ID
